# flood-segmentation-nvidia

./: .gitignore  README.md  teste.py
data-api/sentinel2/: Dockerfile  main.py  requirements.txt  sentinel-2-api.py  sentinel_2_api.py  sentinel_2_error_handling.py
data-api/sentinel_downloader/: __init__.py  cli.py  utils.py
flood-segmentation/: README.md  requirements.txt
flood-segmentation/commands/: evaluate.sh  export.sh  infer.sh  setup.sh  train.sh
flood-segmentation/config/: .env.example  configure_env.py  country_data_split.py  create_mount.py  data_split.py
flood-segmentation/data/: README.md  data_augmentation.py  download_s2.py  evaluate_s2.py  preprocess.py  preprocess_label.py  preprocess_no_extra_band.py  preprocess_no_extra_linear_scale.py
flood-segmentation/flood_data/: preprocess.py  preprocess_label.py  preprocess_no_extra_band.py
flood-segmentation/scripts/v2/: 1.country_data_split.py  2.country_val_split.py  3.test.py  4.extract_result.py  4.threshold.py  5.inference.py  5.threshold.py  6.confusion_matrix.py  6.inference.py  correlation.ipynb
flood-segmentation/spec_files/resnet18/: combined_config.txt
flood-segmentation/spec_files/v1/resnet18/: model_config.txt
flood-segmentation/spec_files/v2/resnet18/: combined_config.txt  dataset_config.txt
flood-segmentation/spec_files/v3/resnet18/: combined_config.txt
flood-segmentation/versions/example/spec_files/resnet18/: combined_config.txt  training_config.txt
flood-segmentation/versions/example/tao_project/unet/pretrained_resnet18/pretrained_semantic_segmentation_vresnet18/: example.hdf5
flood-segmentation/visualization/: vis.py
mask-aug/: 1_watershed_test.ipynb  4_avg_value_refined.ipynb  scripts.py  utils.py
sentinel-downloader/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sentinel-downloader/sentinel_downloader/: __init__.py  cli.py  error_handler.py  image_processing.py  json_runner.py  sentinel1.py  sentinel2.py  sentinel_downloader.py  utils.py
sentinel_downloader/: cli.py  error_handler.py  errors.py  image_processing.py  sentinel1.py  utils.py
stats/: .env.example  Dockerfile  README.md  entrypoint.sh  requirements.txt
stats/model/: model.py  requirements_model.txt
stats/notebooks/: data_collecing_example.ipynb  utils.py
stats/util/: model.py
watershed/: porto_alegre.ipynb  watershed_test.ipynb
