[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel_downloader"
version = "0.1.0"
description = "A Python package for downloading and processing Sentinel satellite images."
authors = [
    { name = "Pedro Vaz de Moraes Pertusi", email = "pedrovazpertusi@gmail.com" },
    { name = "João Lucas de Moraes Cadorniga", email = "joaolucasmbcadorniga@gmail.com" },
    { name = "Eduardo Mendes Vaz", email = "emendesvaz@gmail.com" },
    { name = "Alexandre Magno Maciel dos Santos", email = "alemagno03@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "aenum>=3.1,<4.0",
    "affine>=2.4,<3.0",
    "attrs>=24.2,<25.0",
    "bqplot>=0.12,<1.0",
    "branca>=0.8,<1.0",
    "cachetools>=5.5,<6.0",
    "certifi>=2024.8.30,<2025.0.0",
    "charset-normalizer>=3.3,<4.0",
    "click>=8.1,<9.0",
    "click-plugins>=1.1,<2.0",
    "cligj>=0.7,<1.0",
    "colour==0.1.5",  
    "comm>=0.2,<1.0",
    "contourpy>=1.3,<2.0",
    "cycler>=0.12,<1.0",
    "dataclasses-json>=0.6,<1.0",
    "decorator>=5.1,<6.0",
    "earthengine-api>=1.1,<2.0",
    "eerepr>=0.0.4",  
    "exceptiongroup>=1.2,<2.0",
    "executing>=2.1,<3.0",
    "folium>=0.17,<1.0",
    "fonttools>=4.54,<5.0",
    "future==1.0.0",  
    "geemap>=0.34,<1.0",
    "geocoder>=1.38,<2.0",
    "google-api-core>=2.21,<3.0",
    "google-api-python-client>=2.149,<3.0",
    "google-auth>=2.35,<3.0",
    "google-auth-httplib2>=0.2,<1.0",
    "google-cloud-core>=2.4,<3.0",
    "google-cloud-storage>=2.18,<3.0",
    "google-crc32c>=1.6,<2.0",
    "google-resumable-media>=2.7,<3.0",
    "googleapis-common-protos>=1.65,<2.0",
    "httplib2>=0.22,<1.0",
    "idna>=3.10,<4.0",
    "ipyevents>=2.0,<3.0",
    "ipyfilechooser>=0.6,<1.0",
    "ipyleaflet>=0.19,<1.0",
    "ipython>=8.28,<9.0",
    "ipytree>=0.2,<1.0",
    "ipywidgets>=8.1,<9.0",
    "jedi>=0.19,<1.0",
    "Jinja2>=3.1,<4.0",
    "jupyter-leaflet>=0.19,<1.0",
    "jupyterlab_widgets>=3.0,<4.0",
    "kiwisolver>=1.4,<2.0",
    "MarkupSafe>=3.0,<4.0",
    "marshmallow>=3.22,<4.0",
    "matplotlib>=3.9,<4.0",
    "matplotlib-inline>=0.1.7,<1.0",
    "mypy-extensions>=1.0,<2.0",
    "numpy>=2.1,<3.0",
    "oauthlib>=3.2,<4.0",
    "packaging>=24.1,<25.0",
    "pandas>=2.2,<3.0",
    "parso>=0.8,<1.0",
    "pexpect>=4.9,<5.0",
    "pillow>=10.4,<11.0",
    "plotly>=5.24,<6.0",
    "prompt_toolkit>=3.0,<4.0",
    "proto-plus>=1.24,<2.0",
    "protobuf>=5.28,<6.0",
    "ptyprocess>=0.7,<1.0",
    "pure_eval>=0.2,<1.0",
    "pyasn1>=0.6,<1.0",
    "pyasn1_modules>=0.4,<1.0",
    "Pygments>=2.18,<3.0",
    "pyparsing>=3.1,<4.0",
    "pyperclip>=1.9,<2.0",
    "pyproj>=3.7,<4.0",
    "pyshp>=2.3,<3.0",
    "python-box>=7.2,<8.0",
    "python-dateutil>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pytz>=2024.2,<2025.0",
    "rasterio>=1.4,<2.0",
    "ratelim>=0.1.6,<1.0",
    "requests>=2.32,<3.0",
    "requests-oauthlib>=2.0,<3.0",
    "rsa>=4.9,<5.0",
    "scooby>=0.10,<1.0",
    "sentinelhub>=3.11,<4.0",
    "shapely>=2.0,<3.0",
    "six>=1.16,<2.0",
    "stack-data>=0.6,<1.0",
    "tenacity>=9.0,<10.0",
    "tifffile>=2024.9,<2025.0",
    "tomli>=2.0,<3.0",
    "tomli_w>=1.0,<2.0",
    "tqdm>=4.66,<5.0",
    "traitlets>=5.14,<6.0",
    "traittypes>=0.2,<1.0",
    "typing-inspect>=0.9,<1.0",
    "typing_extensions>=4.12,<5.0",
    "tzdata>=2024.2,<2025.0",
    "uritemplate>=4.1,<5.0",
    "urllib3>=2.2,<3.0",
    "utm>=0.7,<1.0",
    "wcwidth>=0.2,<1.0",
    "widgetsnbextension>=4.0,<5.0",
    "xyzservices>=2024.9,<2025.0"
]


# URLs for more info
[project.urls]
"Homepage" = "https://github.com/JoaoLucasMBC/open-flood.git"
"Repository" = "https://github.com/JoaoLucasMBC/open-flood.git"

# Optional, defines CLI entry points
[project.scripts]
sentinel-cli = "sentinel_downloader.cli:CLI"
sentinel-json = "sentinel_downloader.json_runner:JSONRunner"

[tool.setuptools.packages.find]
include = ["sentinel_downloader"]
exclude = ["output"]

[tool.setuptools]
include-package-data = true
